packages/svelte/tests/compiler-errors/samples/effect-active-rune/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'rune_renamed',
		message: '`$effect.active` is now `$effect.tracking`'
	}
});
